crates/compiler/can/tests/snapshots/test_suffixed__suffixed_tests__apply_argument_suffixed.snap
---
source: crates/compiler/can/tests/test_suffixed.rs
expression: snapshot
---
main = Task.await (foo "hello") \#!a0 -> x = bar (#!a0)
    baz x
---
Defs {
    tags: [
        Index(2147483648),
    ],
    regions: [
        @0-43,
    ],
    space_before: [
        Slice(start = 0, length = 0),
    ],
    space_after: [
        Slice(start = 0, length = 0),
    ],
    spaces: [],
    type_defs: [],
    value_defs: [
        Body(
            @0-4 Identifier {
                ident: "main",
            },
            @15-33 Apply(
                @15-33 Var {
                    module_name: "Task",
                    ident: "await",
                },
                [
                    Apply(
                        Var {
                            module_name: "",
                            ident: "foo",
                        },
                        [
                            @25-32 Str(
                                PlainLine(
                                    "hello",
                                ),
                            ),
                        ],
                        Space,
                    ),
                    @15-33 Closure(
                        [
                            Identifier {
                                ident: "#!a0",
                            },
                        ],
                        @15-33 Defs(
                            Defs {
                                tags: [
                                    Index(2147483648),
                                ],
                                regions: [
                                    @15-33,
                                ],
                                space_before: [
                                    Slice(start = 0, length = 0),
                                ],
                                space_after: [
                                    Slice(start = 0, length = 0),
                                ],
                                spaces: [],
                                type_defs: [],
                                value_defs: [
                                    Body(
                                        @11-12 Identifier {
                                            ident: "x",
                                        },
                                        @15-33 Apply(
                                            @15-18 Var {
                                                module_name: "",
                                                ident: "bar",
                                            },
                                            [
                                                @20-32 ParensAround(
                                                    Var {
                                                        module_name: "",
                                                        ident: "#!a0",
                                                    },
                                                ),
                                            ],
                                            Space,
                                        ),
                                    ),
                                ],
                            },
                            @38-43 Apply(
                                @38-41 Var {
                                    module_name: "",
                                    ident: "baz",
                                },
                                [
                                    @42-43 Var {
                                        module_name: "",
                                        ident: "x",
                                    },
                                ],
                                Space,
                            ),
                        ),
                    ),
                ],
                BangSuffix,
            ),
        ),
    ],
}
