crates/compiler/can/tests/snapshots/test_suffixed__suffixed_tests__apply_function_suffixed.snap
---
source: crates/compiler/can/tests/test_suffixed.rs
expression: snapshot
---
Defs {
    tags: [
        Index(2147483648),
    ],
    regions: [
        @0-45,
    ],
    space_before: [
        Slice(start = 0, length = 0),
    ],
    space_after: [
        Slice(start = 0, length = 1),
    ],
    spaces: [
        Newline,
    ],
    type_defs: [],
    value_defs: [
        Body(
            @0-4 Identifier {
                ident: "main",
            },
            @15-35 Apply(
                @15-35 Var {
                    module_name: "Task",
                    ident: "await",
                },
                [
                    Apply(
                        Var {
                            module_name: "",
                            ident: "foo",
                        },
                        [
                            @21-26 Str(
                                PlainLine(
                                    "bar",
                                ),
                            ),
                        ],
                        Space,
                    ),
                    @15-35 Closure(
                        [
                            Identifier {
                                ident: "#!0_arg",
                            },
                        ],
                        @15-35 Defs(
                            Defs {
                                tags: [
                                    Index(2147483648),
                                ],
                                regions: [
                                    @15-35,
                                ],
                                space_before: [
                                    Slice(start = 0, length = 0),
                                ],
                                space_after: [
                                    Slice(start = 0, length = 0),
                                ],
                                spaces: [],
                                type_defs: [],
                                value_defs: [
                                    Body(
                                        @11-12 Identifier {
                                            ident: "x",
                                        },
                                        @15-35 Apply(
                                            @16-26 ParensAround(
                                                Var {
                                                    module_name: "",
                                                    ident: "#!0_arg",
                                                },
                                            ),
                                            [
                                                @28-35 Str(
                                                    PlainLine(
                                                        "hello",
                                                    ),
                                                ),
                                            ],
                                            Space,
                                        ),
                                    ),
                                ],
                            },
                            @40-45 Apply(
                                @40-43 Var {
                                    module_name: "",
                                    ident: "baz",
                                },
                                [
                                    @44-45 Var {
                                        module_name: "",
                                        ident: "x",
                                    },
                                ],
                                Space,
                            ),
                        ),
                    ),
                ],
                BangSuffix,
            ),
        ),
    ],
}
