crates/compiler/can/tests/snapshots/test_suffixed__suffixed_tests__deep_when.snap
---
source: crates/compiler/can/tests/test_suffixed.rs
expression: snapshot
---
Defs {
    tags: [
        Index(2147483648),
    ],
    regions: [
        @0-99,
    ],
    space_before: [
        Slice(start = 0, length = 0),
    ],
    space_after: [
        Slice(start = 0, length = 0),
    ],
    spaces: [],
    type_defs: [],
    value_defs: [
        Body(
            @0-4 Identifier {
                ident: "main",
            },
            @11-99 When(
                @16-17 Var {
                    module_name: "",
                    ident: "a",
                },
                [
                    WhenBranch {
                        patterns: [
                            @29-30 NumLiteral(
                                "0",
                            ),
                        ],
                        value: @46-99 When(
                            @51-52 Var {
                                module_name: "",
                                ident: "b",
                            },
                            [
                                WhenBranch {
                                    patterns: [
                                        @72-73 NumLiteral(
                                            "1",
                                        ),
                                    ],
                                    value: @97-99 Var {
                                        module_name: "",
                                        ident: "c",
                                    },
                                    guard: None,
                                },
                            ],
                        ),
                        guard: None,
                    },
                ],
            ),
        ),
    ],
}
