crates/compiler/can/tests/snapshots/test_suffixed__suffixed_tests__if_complex.snap
---
source: crates/compiler/can/tests/test_suffixed.rs
expression: snapshot
---
Defs {
    tags: [
        Index(2147483648),
    ],
    regions: [
        @0-307,
    ],
    space_before: [
        Slice(start = 0, length = 0),
    ],
    space_after: [
        Slice(start = 0, length = 0),
    ],
    spaces: [],
    type_defs: [],
    value_defs: [
        Body(
            @0-4 Identifier {
                ident: "main",
            },
            @11-307 Defs(
                Defs {
                    tags: [
                        Index(2147483648),
                        Index(2147483649),
                        Index(2147483650),
                    ],
                    regions: [
                        @20-37,
                        @53-68,
                        @109-298,
                    ],
                    space_before: [
                        Slice(start = 0, length = 0),
                        Slice(start = 0, length = 1),
                        Slice(start = 1, length = 1),
                    ],
                    space_after: [
                        Slice(start = 0, length = 0),
                        Slice(start = 1, length = 0),
                        Slice(start = 2, length = 0),
                    ],
                    spaces: [
                        Newline,
                        Newline,
                    ],
                    type_defs: [],
                    value_defs: [
                        Body(
                            @11-17 Identifier {
                                ident: "isTrue",
                            },
                            @20-37 Apply(
                                @20-27 Var {
                                    module_name: "Task",
                                    ident: "ok",
                                },
                                [
                                    @28-37 Var {
                                        module_name: "Bool",
                                        ident: "true",
                                    },
                                ],
                                Space,
                            ),
                        ),
                        Body(
                            @42-50 Identifier {
                                ident: "isFalsey",
                            },
                            @53-68 Closure(
                                [
                                    @54-55 Identifier {
                                        ident: "x",
                                    },
                                ],
                                @59-68 Apply(
                                    @59-66 Var {
                                        module_name: "Task",
                                        ident: "ok",
                                    },
                                    [
                                        @67-68 Var {
                                            module_name: "",
                                            ident: "x",
                                        },
                                    ],
                                    Space,
                                ),
                            ),
                        ),
                        AnnotatedBody {
                            ann_pattern: @73-76 Identifier {
                                ident: "msg",
                            },
                            ann_type: @79-90 Apply(
                                "",
                                "Task",
                                [
                                    @84-86 Record {
                                        fields: [],
                                        ext: None,
                                    },
                                    @87-90 Apply(
                                        "",
                                        "I32",
                                        [],
                                    ),
                                ],
                            ),
                            comment: None,
                            body_pattern: @95-98 Identifier {
                                ident: "msg",
                            },
                            body_expr: Apply(
                                Var {
                                    module_name: "Task",
                                    ident: "await",
                                },
                                [
                                    Var {
                                        module_name: "",
                                        ident: "isTrue",
                                    },
                                    Closure(
                                        [
                                            Identifier {
                                                ident: "#!a0",
                                            },
                                        ],
                                        @109-298 If(
                                            [
                                                (
                                                    @112-122 Apply(
                                                        @112-113 Var {
                                                            module_name: "Bool",
                                                            ident: "not",
                                                        },
                                                        [
                                                            @114-121 ParensAround(
                                                                Var {
                                                                    module_name: "",
                                                                    ident: "#!a0",
                                                                },
                                                            ),
                                                        ],
                                                        UnaryOp(
                                                            Not,
                                                        ),
                                                    ),
                                                    @140-152 Apply(
                                                        @140-152 Var {
                                                            module_name: "Task",
                                                            ident: "await",
                                                        },
                                                        [
                                                            @140-152 Apply(
                                                                @140-152 Var {
                                                                    module_name: "",
                                                                    ident: "line",
                                                                },
                                                                [
                                                                    @146-152 Str(
                                                                        PlainLine(
                                                                            "fail",
                                                                        ),
                                                                    ),
                                                                ],
                                                                Space,
                                                            ),
                                                            @140-152 Closure(
                                                                [
                                                                    @140-152 RecordDestructure(
                                                                        [],
                                                                    ),
                                                                ],
                                                                @165-170 Apply(
                                                                    @165-168 Var {
                                                                        module_name: "",
                                                                        ident: "err",
                                                                    },
                                                                    [
                                                                        @169-170 Num(
                                                                            "1",
                                                                        ),
                                                                    ],
                                                                    Space,
                                                                ),
                                                            ),
                                                        ],
                                                        BangSuffix,
                                                    ),
                                                ),
                                            ],
                                            Apply(
                                                Var {
                                                    module_name: "Task",
                                                    ident: "await",
                                                },
                                                [
                                                    Apply(
                                                        Var {
                                                            module_name: "",
                                                            ident: "isFalsey",
                                                        },
                                                        [
                                                            @198-208 Var {
                                                                module_name: "Bool",
                                                                ident: "false",
                                                            },
                                                        ],
                                                        Space,
                                                    ),
                                                    Closure(
                                                        [
                                                            Identifier {
                                                                ident: "#!a1",
                                                            },
                                                        ],
                                                        @109-298 If(
                                                            [
                                                                (
                                                                    @187-209 ParensAround(
                                                                        Var {
                                                                            module_name: "",
                                                                            ident: "#!a1",
                                                                        },
                                                                    ),
                                                                    @227-239 Apply(
                                                                        @227-239 Var {
                                                                            module_name: "Task",
                                                                            ident: "await",
                                                                        },
                                                                        [
                                                                            @227-239 Apply(
                                                                                @227-239 Var {
                                                                                    module_name: "",
                                                                                    ident: "line",
                                                                                },
                                                                                [
                                                                                    @233-239 Str(
                                                                                        PlainLine(
                                                                                            "nope",
                                                                                        ),
                                                                                    ),
                                                                                ],
                                                                                Space,
                                                                            ),
                                                                            @227-239 Closure(
                                                                                [
                                                                                    @227-239 RecordDestructure(
                                                                                        [],
                                                                                    ),
                                                                                ],
                                                                                @252-257 Apply(
                                                                                    @252-254 Var {
                                                                                        module_name: "",
                                                                                        ident: "ok",
                                                                                    },
                                                                                    [
                                                                                        @255-257 Record(
                                                                                            [],
                                                                                        ),
                                                                                    ],
                                                                                    Space,
                                                                                ),
                                                                            ),
                                                                        ],
                                                                        BangSuffix,
                                                                    ),
                                                                ),
                                                            ],
                                                            @283-298 Apply(
                                                                @283-298 Var {
                                                                    module_name: "",
                                                                    ident: "line",
                                                                },
                                                                [
                                                                    @289-298 Str(
                                                                        PlainLine(
                                                                            "success",
                                                                        ),
                                                                    ),
                                                                ],
                                                                Space,
                                                            ),
                                                        ),
                                                    ),
                                                ],
                                                BangSuffix,
                                            ),
                                        ),
                                    ),
                                ],
                                BangSuffix,
                            ),
                        },
                    ],
                },
                @304-307 Var {
                    module_name: "",
                    ident: "msg",
                },
            ),
        ),
    ],
}
